@@ -3,24 +3,20 @@ package school.redrover.page;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
-import org.openqa.selenium.support.FindBy;
 import org.openqa.selenium.interactions.Actions;
+import org.openqa.selenium.support.FindBy;
 import org.openqa.selenium.support.ui.ExpectedConditions;
 import school.redrover.common.BasePage;
 import school.redrover.common.TestUtils;
-import school.redrover.page.account.AccountSettingsPage;
+import school.redrover.page.aboutjenkins.AboutJenkinsPage;
 import school.redrover.page.buildhistory.BuildHistoryPage;
-import school.redrover.page.freestyle.FreestyleConfigurationPage;
-import school.redrover.page.freestyle.FreestyleProjectPage;
 import school.redrover.page.managejenkins.ManageJenkinsPage;
-import school.redrover.page.multibranch.MultibranchProjectPage;
 import school.redrover.page.newitem.NewItemPage;
-import school.redrover.page.organizationfolder.OrganizationFolderPage;
-import school.redrover.page.pipeline.PipelineConfigurationPage;
 import school.redrover.page.signIn.SignInPage;
 import school.redrover.page.view.NewViewPage;
-
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 public class HomePage extends BasePage {
 
@@ -29,6 +25,29 @@ public class HomePage extends BasePage {
 
     @FindBy(xpath = "//span[text()='log out']")
     private WebElement logOutButton;
+
+    @FindBy(xpath = "//a[@href='/view/all/newJob']")
+    private WebElement newItemButtonOnLeftSidePanel;
+
+    @FindBy(name = "description")
+    private WebElement descriptionTextArea;
+
+    @FindBy(xpath = "//td//a[@tooltip][contains(@href,'build')]")
+    private WebElement scheduleBuild;
+
+    @FindBy(id = "notification-bar")
+    private WebElement buildScheduled;
+
+    @FindBy(css = "a[aria-label='New View']")
+    private WebElement newViewPlus;
+
+    @FindBy(css = "footer .jenkins_ver")
+    private WebElement jenkinsVersionButton;
+
+    @FindBy(xpath = "//a[@href='/manage/about']")
+    private WebElement jenkinsAboutOptionInJenkinsVersionDropDownMenu;
+
+    private final static String JOB_PATTERN = "//tr[@id='job_%s']";
 
     public HomePage(WebDriver driver) {
         super(driver);
@@ -40,21 +59,19 @@ public class HomePage extends BasePage {
         return this;
     }
 
-    public boolean isDescriptionFieldDisplayed() {
-        return getDriver().findElement(By.name("description")).isDisplayed();
-    }
-
     public boolean isJobListEmpty() {
-        return getDriver().findElement(By.id("main-panel")).getText().contains("Welcome to Jenkins!");
-    }
-
-    public boolean isProjectExists(String projectName) {
-        return getProjectNameList().contains(projectName);
+        return getWait5().until(ExpectedConditions.refreshed(ExpectedConditions.visibilityOfElementLocated(
+                By.id("main-panel")))).getText().contains("Welcome to Jenkins!");
     }
 
     public HomePage sendDescription(String text) {
-        getDriver().findElement(By.cssSelector("#description > form > div.jenkins-form-item.tr > div.setting-main.help-sibling > textarea"))
-                .sendKeys(text);
+        descriptionTextArea.sendKeys(text);
+
+        return this;
+    }
+
+    public HomePage clearDescription() {
+        descriptionTextArea.clear();
 
         return this;
     }
@@ -70,63 +87,27 @@ public class HomePage extends BasePage {
         return descriptionText.getText();
     }
 
-    public String getWelcomeMessage() {
-
-        return getWait5().until(ExpectedConditions.visibilityOf(getDriver().findElement(By.xpath("//h1"))))
-                .getText();
+    public Boolean isDescriptionDisplayed() {
+        return descriptionText.isDisplayed();
     }
 
-    public String getNameProject() {
-
-        return getWait5().until(ExpectedConditions.visibilityOf(getDriver().findElement(By
-                        .xpath("//*[@id='job_My name']/td[3]/a"))))
-                .getText();
-    }
-
-    public NewItemPage createJob() {
+    public NewItemPage clickCreateJob() {
         getDriver().findElement(By.xpath("//span[text()='Create a job']")).click();
 
         return new NewItemPage(getDriver());
     }
 
     public NewItemPage clickNewItemOnLeftSidePanel() {
-        getWait10().until(ExpectedConditions.elementToBeClickable(By.xpath("//a[@data-task-success='Done.']"))).click();
+        getWait10().until(ExpectedConditions.elementToBeClickable(newItemButtonOnLeftSidePanel)).click();
 
         return new NewItemPage(getDriver());
     }
 
-    public FreestyleProjectPage clickOnJobInListOfItemsOnHP(String nameItem) {
-        getWait10().until(ExpectedConditions.visibilityOfElementLocated(
-                By.xpath("//td/a[@href='job/" + nameItem.replace(" ", "%20") + "/']"))).click();
-
-        return new FreestyleProjectPage(getDriver());
-    }
-
     public <T> T clickOnJobInListOfItems(String nameItem, T resultPage) {
-        getWait10()
-                .until(ExpectedConditions.visibilityOfElementLocated(By.xpath("//span[text()='" + nameItem + "']")))
-                .click();
+        getWait10().until(ExpectedConditions.visibilityOfElementLocated(
+                By.xpath("//span[text()='%s']".formatted(nameItem)))).click();
 
         return resultPage;
-    }
-
-    public FreestyleProjectPage clickOnJobInListOfItems(String nameItem) {
-        getWait10()
-                .until(ExpectedConditions.visibilityOfElementLocated(By.xpath("//span[text()='" + nameItem + "']")))
-                .click();
-
-        return new FreestyleProjectPage(getDriver());
-    }
-
-    public String getNameFreestyleProjectText() {
-
-        return getWait10().until(ExpectedConditions.visibilityOfElementLocated(By.xpath("//a[@class='jenkins-table__link model-link inside']"))).getText();
-    }
-
-    public AccountSettingsPage goToAccountSettingsPage() {
-        getDriver().findElement(By.xpath("//div[@class='login page-header__hyperlinks']/a[@class='model-link']")).click();
-
-        return new AccountSettingsPage(getDriver());
     }
 
     public ManageJenkinsPage clickManageJenkinsOnLeftSidePanel() {
@@ -136,30 +117,7 @@ public class HomePage extends BasePage {
         return new ManageJenkinsPage(getDriver());
     }
 
-    public OrganizationFolderPage clickOnOrganizationFolderInListOfItems(String nameItem) {
-        getWait5().until(ExpectedConditions.visibilityOf(getDriver()
-                .findElement(By.xpath("//span[text()='" + nameItem + "']")))).click();
-
-        return new OrganizationFolderPage(getDriver());
-    }
-
-    public MultibranchProjectPage clickOnMultibranchJobInListOfItems(String nameItem) {
-        getWait10().until(ExpectedConditions.visibilityOfElementLocated(By.xpath("//span[text()='" + nameItem + "']"))).click();
-
-        return new MultibranchProjectPage(getDriver());
-    }
-
-    public PipelineConfigurationPage createNewPipeline(String projectName) {
-
-        getDriver().findElement(By.xpath("//span[text()='New Item']/ancestor::span[@class='task-link-wrapper ']")).click();
-        getDriver().findElement(By.id("name")).sendKeys(projectName);
-        getDriver().findElement(By.xpath("//span[text()='Pipeline']")).click();
-        getDriver().findElement(By.id("ok-button")).click();
-
-        return new PipelineConfigurationPage(getDriver());
-    }
-
-    public BuildHistoryPage clickBuildHistoryTab() {
+    public BuildHistoryPage clickBuildHistoryOnLeftSidePanel() {
         getDriver().findElement(By.xpath("//a[@href='/view/all/builds']")).click();
 
         return new BuildHistoryPage(getDriver());
@@ -174,42 +132,27 @@ public class HomePage extends BasePage {
                 .map(WebElement::getText).toList();
     }
 
-    public NewItemPage clickNewItem() {
-        getWait10().until(ExpectedConditions.elementToBeClickable(By.linkText("New Item"))).click();
-
-        return new NewItemPage(getDriver());
-    }
-
     public NewViewPage clickNewView() {
-        getWait10().until(ExpectedConditions.elementToBeClickable(By.cssSelector("a[aria-label='New View']"))).click();
+        getWait10().until(ExpectedConditions.elementToBeClickable(newViewPlus)).click();
 
         return new NewViewPage(getDriver());
     }
 
-    public String getNameOfView(String viewName) {
+    public String getNameOfView() {
         return getWait10().until(ExpectedConditions.visibilityOfElementLocated(
-                By.xpath("//a[@href='/view/" + viewName + "/']"))).getText();
+                By.cssSelector(".tab.active"))).getText();
     }
 
-    public FreestyleConfigurationPage clickJobLink(String jobName) {
-        getDriver().findElement(By.linkText(jobName)).click();
-
-        return new FreestyleConfigurationPage(getDriver());
+    public boolean isJobDisplayed(String jobName) {
+        return getWait10().until(ExpectedConditions.visibilityOfElementLocated(
+                By.xpath("//*[@id='job_" + jobName + "']/td[3]/a/span"))).isDisplayed();
     }
 
-    public FreestyleProjectPage clickFreestyleProjectOnDashboard(String projectName) {
-        getWait5().until(ExpectedConditions.visibilityOf(getDriver().findElement(
-                By.xpath("//a[@class='jenkins-table__link model-link inside']/span[text()='%s']".formatted(projectName)))))
-                .click();
+    public NewItemPage clickOnNewItemLinkWithChevron(String projectName) {
+        WebElement jobTableLink = getWait5().until(ExpectedConditions.elementToBeClickable(getDriver().findElement(By.cssSelector(String.format("a[href='job/%s/'].jenkins-table__link", projectName)))));
 
-        return new FreestyleProjectPage(getDriver());
-    }
-
-    public NewItemPage clickOnNewItemLinkWithChevron() {
-        WebElement jobTableLink = getWait5().until(ExpectedConditions.elementToBeClickable(getDriver().findElement(By.cssSelector("a[href*='job'].jenkins-table__link"))));
         new Actions(getDriver()).moveToElement(jobTableLink).perform();
-
-        TestUtils.moveAndClickWithJS(getDriver(), getDriver().findElement(By.cssSelector(".jenkins-table__link .jenkins-menu-dropdown-chevron")));
+        TestUtils.moveAndClickWithJS(getDriver(), getDriver().findElement(By.cssSelector(String.format("button[data-href$='job/%s/']", projectName))));
         TestUtils.scrollAndClickWithJS(getDriver(), getDriver().findElement(By.cssSelector(".jenkins-dropdown a[href$='/newJob'")));
 
         return new NewItemPage(getDriver());
@@ -217,12 +160,161 @@ public class HomePage extends BasePage {
 
     public String getProjectName() {
         return getWait5()
-                         .until(ExpectedConditions.elementToBeClickable(getDriver().findElement(By.cssSelector("a[href*='job'].jenkins-table__link"))))
-                         .getText();
+                .until(ExpectedConditions.elementToBeClickable(
+                        getDriver().findElement(By.cssSelector("a[href*='job'].jenkins-table__link")))).getText();
     }
 
-    public SignInPage clickLogOutButton(){
+    public HomePage showDropdownOnHoverByJobName(String jobName) {
+        By dropdownButtonLocator = By.xpath("//tr[@id='job_%s']//button".formatted(jobName));
+
+        new Actions(getDriver())
+                .moveToElement(getDriver().findElement(By.xpath("//tr[@id='job_%s']//a".formatted(jobName)))).perform();
+
+        WebElement dropdownButton = getWait5().until(ExpectedConditions.elementToBeClickable(dropdownButtonLocator));
+        TestUtils.moveAndClickWithJS(getDriver(), dropdownButton);
+
+        getWait5().until(ExpectedConditions.visibilityOfElementLocated(By.cssSelector("#tippy-6 .jenkins-dropdown__item")));
+
+        return this;
+    }
+
+    public List<WebElement> getDropdownOptionsList() {
+        return getDriver().findElements(By.cssSelector("#tippy-6 .jenkins-dropdown__item"));
+    }
+
+    public boolean isOptionPresentedInDropdown(String optionName) {
+        List<WebElement> dropdownOptionsList = getDropdownOptionsList();
+
+        return dropdownOptionsList.stream()
+                .anyMatch(webElement -> webElement.getText().contains(optionName));
+    }
+
+    public HomePage clickDeleteItemFromDropdown(String itemName) {
+        getWait10().until(ExpectedConditions.elementToBeClickable(
+                getDriver().findElement(By.xpath("//button[@href='/job/%s/doDelete']".formatted(itemName))))).click();
+
+        return this;
+    }
+
+    public HomePage clickYesOnDeletionConfirmationPopup() {
+        getDriver().findElement(By.xpath("//button[@data-id='ok']")).click();
+
+        return new HomePage(getDriver());
+    }
+
+    public SignInPage clickLogOutButton() {
         logOutButton.click();
         return new SignInPage(getDriver());
+    }
+
+    public List<String> getColumnNames() {
+
+        return getDriver().findElements(By.xpath("//th/a")).stream()
+                .map(WebElement::getText).toList();
+    }
+
+    public String getLogOutButtonText() {
+        return logOutButton.getText();
+    }
+
+    public boolean isSvgIconDifferentBetweenProjects(String firstProjectName, String secondProjectName) {
+        return getSvgTitle(firstProjectName).equals(getSvgTitle(secondProjectName));
+    }
+
+    private String getSvgTitle(String projectName) {
+        String xpath = String.format("//a[@href='job/%s/']/ancestor::tr//*[name()='svg']", projectName);
+
+        return getWait5()
+                .until(ExpectedConditions.visibilityOfElementLocated(By.xpath(xpath)))
+                .getDomAttribute("title");
+    }
+
+    public void clickColumnNameInDashboardTable(String columnName) {
+        getDriver().findElement(By.xpath(String.format("//th/a[text()='%s']", columnName))).click();
+    }
+
+    public boolean verifyAscendingSortingSign(String columnName) {
+        String sign = getDriver().findElement(By.xpath(String.format("//th/a[text()='%s']", columnName)))
+                .findElement(By.cssSelector("span.sortarrow")).getText();
+
+        return sign.contains("↓");
+    }
+
+    public List<String> getListHealthReportFromDashboard() {
+        if (isJobListEmpty()) {
+            return List.of();
+        }
+        return getDriver().findElements(By.cssSelector(".healthReport")).stream()
+                .map(element -> element.getDomAttribute("data")).collect(Collectors.toList());
+    }
+
+    public List<String> getListStatusLastBuildFromDashboard() {
+        if (isJobListEmpty()) {
+            return List.of();
+        }
+
+        List<String> list = getDriver()
+                .findElements(By.xpath("//tbody//td[@class='jenkins-table__cell--tight jenkins-table__icon']"))
+                .stream().map(element -> element.getDomAttribute("data")).collect(Collectors.toList());
+        list.removeIf(Objects::isNull);
+
+        return list;
+    }
+
+    public boolean isBuildQueueDisplayed() {
+        return getDriver().findElement(By.id("buildQueue")).isDisplayed();
+    }
+
+    public String getBuildQueueBlockText() {
+        return getDriver().findElement(By.xpath("//td[@class='pane']")).getText();
+    }
+
+    public HomePage clickScheduleBuild() {
+        scheduleBuild.click();
+
+        return this;
+    }
+
+    public boolean isTextBuildScheduled() {
+        try {
+            Thread.sleep(1000);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+        return buildScheduled.getText().equals("Build scheduled");
+    }
+
+    public String getJobLastSuccess(String jobName) {
+
+        return getWait10().until(ExpectedConditions.visibilityOfElementLocated(
+                By.xpath(JOB_PATTERN.formatted(jobName)))).findElement(By.xpath(".//td[4]")).getText()
+                + getDriver().findElement(By.xpath(JOB_PATTERN.formatted(jobName)))
+                .findElement(By.xpath(".//a")).getText();
+    }
+
+    public String getJobLastFailure(String jobName) {
+
+        return getWait10().until(ExpectedConditions.visibilityOfElementLocated(
+                By.xpath(JOB_PATTERN.formatted(jobName)))).findElement(By.xpath(".//td[5]")).getText()
+                + getDriver().findElement(By.xpath(JOB_PATTERN.formatted(jobName)))
+                .findElement(By.xpath(".//a")).getText();
+    }
+
+    public HomePage clickJenkinsVersionButton() {
+        getWait10().until(ExpectedConditions.elementToBeClickable(jenkinsVersionButton)).click();
+
+        return this;
+    }
+
+    public List<String> getJenkinsVersionDropDownOptions() {
+        return getWait10().until(ExpectedConditions.visibilityOfAllElementsLocatedBy(
+                        By.cssSelector(".jenkins-dropdown a")))
+                .stream().map(WebElement::getText).map(String::trim).toList();
+    }
+
+    public AboutJenkinsPage clickAboutJenkinsInJenkinsVersionDropDownMenu() {
+        getWait10().until(ExpectedConditions.elementToBeClickable(jenkinsAboutOptionInJenkinsVersionDropDownMenu)).click();
+
+        return new AboutJenkinsPage(getDriver());
     }
 }
